remove space caption

--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -238,7 +238,7 @@ To evaluate the performance of a given nanoporous material for separation in the
 \begin{figure}[t]
 \centering
   \includegraphics[width=\linewidth]{figures/2-thermo/Henry_0.jpg}
-  \caption{\ For 8,401 MOFs with favorable thermodynamic Xe/Kr selectivity ($s\e{0} > 1$), pair-plots of $\log\e{10}(s\e{0})$, $\log\e{10}(K\ex{Xe})$ and $\log\e{10}(K\ex{Kr})$ (the Henry's constants are in \si{\milli\mol\per\gram\per\pascal}) in the off-diagonal subplots (note that the y-axis is displayed on the right side) and the distribution of each quantity are on the diagonal (note that the y-axis displayed on the right side corresponds to the count and the x-axis is correctly labeled below each subplot).}
+  \caption{For 8,401 MOFs with favorable thermodynamic Xe/Kr selectivity ($s\e{0} > 1$), pair-plots of $\log\e{10}(s\e{0})$, $\log\e{10}(K\ex{Xe})$ and $\log\e{10}(K\ex{Kr})$ (the Henry's constants are in \si{\milli\mol\per\gram\per\pascal}) in the off-diagonal subplots (note that the y-axis is displayed on the right side) and the distribution of each quantity are on the diagonal (note that the y-axis displayed on the right side corresponds to the count and the x-axis is correctly labeled below each subplot).}
   \label{fgr:histo_K}
 \end{figure}
 
@@ -251,7 +251,7 @@ With regard to Henry's constants, we observe a broad selection of behavior, with
 \begin{figure}[t]
 \centering
   \includegraphics[width=\linewidth]{figures/2-thermo/Enthalpy_0_log.jpg}
-  \caption{\ For 8,401 MOFs with favorable thermodynamic Xe/Kr selectivity ($s\e{0} > 1$), pair-plots of $\log(s\e{0})$, $\Delta\e{exc}H\e{0}$, $\Delta\e{ads}H\ex{Xe}\e{0}$ and $\Delta\e{ads}H\ex{Kr}\e{0}$ (the enthalpies are in \si{\kilo\joule\per\mol}) in the off-diagonal subplots and the distribution of each quantity are on the diagonal.}
+  \caption{For 8,401 MOFs with favorable thermodynamic Xe/Kr selectivity ($s\e{0} > 1$), pair-plots of $\log(s\e{0})$, $\Delta\e{exc}H\e{0}$, $\Delta\e{ads}H\ex{Xe}\e{0}$ and $\Delta\e{ads}H\ex{Kr}\e{0}$ (the enthalpies are in \si{\kilo\joule\per\mol}) in the off-diagonal subplots and the distribution of each quantity are on the diagonal.}
   \label{fgr:histo_H}
 \end{figure}
 
@@ -264,7 +264,7 @@ We first observe that the low-loading adsorption enthalpy of xenon ($\Delta\e{ad
 \begin{figure}[t]
   \centering
     \includegraphics[width=\linewidth]{figures/2-thermo/s_0_vs_s_2080_overview_log.jpg}
-    \caption{\ Difference of selectivity between low pressure and at a \SI{1013}{\hecto\pascal} pressure for a 20:80 xenon krypton composition. The relative difference between the low-pressure selectivity and the ambient-pressure is particularly high for the points labeled in purple.}
+    \caption{Difference of selectivity between low pressure and at a \SI{1013}{\hecto\pascal} pressure for a 20:80 xenon krypton composition. The relative difference between the low-pressure selectivity and the ambient-pressure is particularly high for the points labeled in purple.}
     \label{fgr:overview}
   \end{figure}
   
@@ -292,7 +292,7 @@ We first observe that the low-loading adsorption enthalpy of xenon ($\Delta\e{ad
   \begin{figure}[t]
   \centering
     \includegraphics[width=\linewidth]{figures/2-thermo/enthalpy_entropy_0_s_0.jpg}
-    \caption{\ The energetic equivalent of exchange entropy $T\Delta\e{exc}S\e{0}$ and enthalpy $\Delta\e{exc}H\e{0}$ at low pressure labeled using the selectivity $s\e{0}$ at low pressure. The limits between labels follows a affine function of slope $1/T$ and of intercept $-R\ln(s\e{0}\ex{lim})$ where $s\e{0}\ex{lim}$ is the limit selectivity value (\emph{cf.} Equation~(\ref{eqn:entropy})). In other words, the iso-selectivity lines are all parallel lines of equation $y=f(x)$ where $f$ is the affine function described previously.}
+    \caption{The energetic equivalent of exchange entropy $T\Delta\e{exc}S\e{0}$ and enthalpy $\Delta\e{exc}H\e{0}$ at low pressure labeled using the selectivity $s\e{0}$ at low pressure. The limits between labels follows a affine function of slope $1/T$ and of intercept $-R\ln(s\e{0}\ex{lim})$ where $s\e{0}\ex{lim}$ is the limit selectivity value (\emph{cf.} Equation~(\ref{eqn:entropy})). In other words, the iso-selectivity lines are all parallel lines of equation $y=f(x)$ where $f$ is the affine function described previously.}
     \label{fgr:HSplot_0}
   \end{figure}
   
@@ -300,7 +300,7 @@ We first observe that the low-loading adsorption enthalpy of xenon ($\Delta\e{ad
   \begin{figure}[t]
   \centering
     \includegraphics[width=\linewidth]{figures/2-thermo/enthalpy_entropy_2080_s_0.jpg}
-    \caption{\ The energetic equivalent of exchange entropy $T\Delta\e{exc}S\e{1}$ and enthalpy $\Delta\e{exc}H\e{1}$ at ambient pressure labeled using the selectivity $s\e{0}$ at low pressure. The points are layered so that the points with higher $s\e{0}$ are always above. To see a split version of this plot, please refer to the Figure~S6 in the supplementary information.}
+    \caption{The energetic equivalent of exchange entropy $T\Delta\e{exc}S\e{1}$ and enthalpy $\Delta\e{exc}H\e{1}$ at ambient pressure labeled using the selectivity $s\e{0}$ at low pressure. The points are layered so that the points with higher $s\e{0}$ are always above. To see a split version of this plot, please refer to the Figure~S6 in the supplementary information.}
     \label{fgr:HSplot_1}
   \end{figure}
   
@@ -318,14 +318,14 @@ We first observe that the low-loading adsorption enthalpy of xenon ($\Delta\e{ad
     \includegraphics[width=0.37\textwidth]{figures/2-thermo/k_H.jpg}
     \hspace{8mm}
     \includegraphics[width=0.37\textwidth]{figures/2-thermo/k_S.jpg}
-    \caption{\ Distribution of the enthalpic $k\e{H}$ and entropic $k\e{S}$ contributions to the change of selectivity from low to ambient pressure for the 630 materials with $s\e{0}>30$. $k\e{H}$ has a rather uniform distribution, whereas $k\e{S}$ has a bell-like distribution. }
+    \caption{Distribution of the enthalpic $k\e{H}$ and entropic $k\e{S}$ contributions to the change of selectivity from low to ambient pressure for the 630 materials with $s\e{0}>30$. $k\e{H}$ has a rather uniform distribution, whereas $k\e{S}$ has a bell-like distribution. }
     \label{fgr:distk}
   \end{figure*}
   
   \begin{figure}[t]
   \centering
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/k_S_vs_k_H.jpg}
-    \caption{\ Scatter plot of the enthalpic contribution $k\e{H}$ and entropic contribution $k\e{S}$ for the 630 materials with $s\e{0}>30$. The entropic compensation occurs when the enthalpic contribution is around $0.1$, else its value is around 1 and has little effect on the selectivity change.}
+    \caption{Scatter plot of the enthalpic contribution $k\e{H}$ and entropic contribution $k\e{S}$ for the 630 materials with $s\e{0}>30$. The entropic compensation occurs when the enthalpic contribution is around $0.1$, else its value is around 1 and has little effect on the selectivity change.}
     \label{fgr:scatterk}
   \end{figure}
   
@@ -348,7 +348,7 @@ We first observe that the low-loading adsorption enthalpy of xenon ($\Delta\e{ad
   
   \begin{table}
   \small
-    \caption{\ Enthalpic and entropic contributions to the selectivity change for some archetypal structures selected for their high $s\e{0}$ selectivity. Every structure is identified using a CSD Refcode and the first article that mentions it }
+    \caption{Enthalpic and entropic contributions to the selectivity change for some archetypal structures selected for their high $s\e{0}$ selectivity. Every structure is identified using a CSD Refcode and the first article that mentions it }
     \label{tbl:effect}
     \renewcommand{\arraystretch}{1.1}
     \begin{tabular*}{0.48\textwidth}{@{\extracolsep{\fill}}lrrrrrrrrrr}
@@ -376,7 +376,7 @@ We first observe that the low-loading adsorption enthalpy of xenon ($\Delta\e{ad
   \centering
     \includegraphics[width=0.48\textwidth]{figures/2-thermo/MISQIQ_clean.jpg}\hfill
     \includegraphics[width=0.48\textwidth]{figures/2-thermo/MISQIQ_clean_isotherm_xenon_krypton_298K.jpg}
-    \caption{\ Representation of a chiral open-framework fluoroaluminophosphate [C$_4$N$_3$H$_{16}$]$\cdot$[Al$_6$P$_3$O$_{12}$F$_6$(OH)$_6$] denoted AlPO-JU89 (referenced MISQIQ in the Cambridge structural database), which has been loaded with xenon and krypton in a GCMC simulation, on the left side.\cite{MISQIQ} Color code: Al in silver, P in orange, O in red, H in white and F in green for the framework; and Xe in transparent pink and Kr in cyan for the adsorbates. The pure-component isotherms fitted with a 1-site Langmuir model for both xenon and krypton at \SI{298}{\kelvin} on the right side (for more information on the Langmuir parameters see supplementary information Equation~(S5)).}
+    \caption{Representation of a chiral open-framework fluoroaluminophosphate [C$_4$N$_3$H$_{16}$]$\cdot$[Al$_6$P$_3$O$_{12}$F$_6$(OH)$_6$] denoted AlPO-JU89 (referenced MISQIQ in the Cambridge structural database), which has been loaded with xenon and krypton in a GCMC simulation, on the left side.\cite{MISQIQ} Color code: Al in silver, P in orange, O in red, H in white and F in green for the framework; and Xe in transparent pink and Kr in cyan for the adsorbates. The pure-component isotherms fitted with a 1-site Langmuir model for both xenon and krypton at \SI{298}{\kelvin} on the right side (for more information on the Langmuir parameters see supplementary information Equation~(S5)).}
     \label{fgr:MISQIQ}
   \end{figure*}
   
